--- a/index.html
+++ b/index.html
@@ -13,32 +13,88 @@
   </head>
   <body>
     <nav id="nav">
-      <p id="logo" class="navigation">Logo</p>
-      <p id="new-image" class="navigation">Draw new image!</p>
-      <p id="previous-project" class="navigation">Previous projects</p>
-      <p id="me" class="navigation">About me</p>
+      <button 
+      id="logo" 
+      ><img src="/images/logo.png" alt="LOGO"/>
+      <!-- <a href='https://pl.freepik.com/wektory/streszczenie'>Streszczenie plik wektorowy utworzone przez vectorjuice - pl.freepik.com</a> -->
+    </button>
+      <button
+        id="new-image"
+        class="tablink"
+        onclick="openPage('draw-page', this, '#8573f8')"
+      >
+        Draw new image!
+      </button>
+      <button
+        id="previous-project"
+        class="tablink"
+        onclick="openPage('previous-projects-page', this, '#8573f8')"
+      >
+        Previous projects
+      </button>
+      <button
+        id="me"
+        class="tablink"
+        onclick="openPage('about-me-page', this, '#8573f8')"
+      >
+        About me
+      </button>
     </nav>
-    <header id="header">
-      <section class="colors" class="left">
-        <div id="generated-colors"></div>
-        <button id="color-button" class="btn">Generate colors</button>
-      </section>
-      <section class="emojis" class="right">
-        <a id="previous" class="e-btn">&#8249;</a>
-        <span id="generated-emojis"></span>
-        <a id="next" class="e-btn">&#8250;</a>
-        <button id="emojis-button" class="btn">Generate emojis</button>
-      </section>
-    </header>
     <main>
-      <canvas id="canvas" width="300" height="350">The canva is error</canvas>
-      <section id="buttons">
-        <button id="clear-button" class="btn">Clear</button>
-        <a id="save-button" class="btn">Save</a>
-        <section id="previous-project-display">
+      <container id="draw-page" class="page-content">
+        <section id="rendered-elements" class="single-section left">
+          <div class="colors">
+            <div id="generated-colors"></div>
+            <button id="color-button" class="btn">Generate next colors</button>
+          </div>
+          <div class="emojis">
+            <a id="previous" class="e-btn">&#8249;</a>
+            <span id="generated-emojis"></span>
+            <a id="next" class="e-btn">&#8250;</a>
+            <button id="emojis-button" class="btn">Reset emojis</button>
+          </div>
         </section>
-      </section>
+        <canvas id="canvas" width="300" height="350" class="single-section">The canva is error</canvas>
+        <section id="buttons" class="single-section right">
+          <button id="clear-button" class="btn">Clear</button>
+          <a id="save-button" class="btn">Save</a>
+        </section>
+      </container>
+      <container id="previous-projects-page" class="page-content">
+        <section id="previous-project-display">
+          <h2 class="show">You have got any projects yet. Draw something!</h2>
+        </section>
+      </container>
+      <container id="about-me-page" class="page-content">
+        <section id="about-me">
+          <h2 class="text">Hello!</h2>
+          <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis dolorum ab incidunt ipsum, officiis delectus repudiandae quaerat, voluptatibus ipsam asperiores eveniet? Dolores tenetur rem veritatis perferendis reiciendis corporis laboriosam dolore!
+          Provident, quaerat ab nesciunt amet saepe dicta, modi necessitatibus repudiandae ex, debitis iste! Hic ratione animi quis esse saepe ad accusamus quae, laudantium placeat debitis harum maiores pariatur nam necessitatibus.
+          Laudantium dolor praesentium, voluptatum facilis ea reiciendis porro maiores velit neque rem. Inventore, praesentium? Architecto labore ut totam repellat nam debitis ratione illum, quam aspernatur fuga consectetur amet nulla enim?</p>
+          <img src="./images/sitting-person.png" alt="My image"/>
+        </section>
+      </container>
     </main>
+
+
     <script src="main.js"></script>
+    <script>
+      function openPage(pageName,elmnt,color) {
+        var i, tabcontent, tablinks;
+        tabcontent = document.getElementsByClassName("page-content");
+        for (i = 0; i < tabcontent.length; i++) {
+          tabcontent[i].style.display = "none";
+        }
+        tablinks = document.getElementsByClassName("tablink");
+        for (i = 0; i < tablinks.length; i++) {
+          tablinks[i].style.backgroundColor = "";
+        }
+        document.getElementById(pageName).style.display = "block";
+        elmnt.style.backgroundColor = color;
+      }
+      
+      // Get the element with id="defaultOpen" and click on it
+      document.getElementById("new-image").click();
+      </script>
   </body>
 </html>
